# opengl-glfw-glad-vscode-template

./: CMakeLists.txt  README.md  configure.sh  run.sh
.github/workflows/: main.yml
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
